--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,31 @@
 {
-    "name": "webkinder/wk-google-analytics",
-    "description": "Plugin für Google Analytics Integration",
-    "keywords": ["wordpress", "plugin"],
-    "version": "1.0.1",
-    "homepage": "https://www.webkinder.ch/",
-    "license": "GPL-3.0+",
-    "authors": [{
-        "name": "WebKinder",
-        "email": "support@webkinder.ch",
-        "homepage": "https://www.webkinder.ch/"
-    }],
-    "type": "wordpress-plugin",
-    "require": {
-        "php": ">=7.0",
-        "composer/installers": "v1.2.0"
-    },
-    "autoload": {
-        "psr-4": {"WebKinder\\GoogleAnalytics\\": "lib/"}
+  "name": "webkinder/wk-google-analytics",
+  "description": "Plugin für Google Analytics Integration",
+  "keywords": [
+    "wordpress",
+    "plugin"
+  ],
+  "version": "1.0.1",
+  "homepage": "https://www.webkinder.ch/",
+  "license": "GPL-3.0+",
+  "authors": [
+    {
+      "name": "WebKinder",
+      "email": "support@webkinder.ch",
+      "homepage": "https://www.webkinder.ch/"
     }
+  ],
+  "type": "wordpress-plugin",
+  "require": {
+    "php": ">=7.0",
+    "composer/installers": "v1.2.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6"
+  },
+  "autoload": {
+    "psr-4": {
+      "WebKinder\\GoogleAnalytics\\": "lib/"
+    }
+  }
 }
