Removed unused tests, refactored for js only solution to prevent caching from breaking

--- a/.distignore
+++ b/.distignore
@@ -1,9 +1,22 @@
+.distignore
 .editorconfig
 .gitattributes
 .gitignore
+.wordpress-org
 phpcs.xml.dist
 phpunit.xml.dist
 tests
 bin
 composer.json
 composer.lock
+README.md
+CONTRIBUTING.md
+LICENSE.md
+wp-cli.local.yml
+yarn.lock
+tests
+node_modules
+*.sql
+*.tar.gz
+*.zip
+
