--- a/.distignore
+++ b/.distignore
@@ -2,8 +2,10 @@
 .editorconfig
 .gitattributes
 .gitignore
-.git
 .github
+.github/*
+.git
+.git/*
 .wordpress-org
 phpcs.xml.dist
 phpunit.xml.dist
