--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Check PHP Version
       run: php -v
 
+    - name: Composer update
+      run: composer update
+
     - name: Composer install
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
 
