--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,23 +12,22 @@ jobs:
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
     - name: Setup PHP
-      uses: shivammathur/setup-php@v1
+      uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php-versions }}
         extension-csv: mbstring, intl #optional, setup extensions
         ini-values-csv: post_max_size=256M, short_open_tag=On #optional, setup php.ini configuration
         coverage: xdebug #optional, setup coverage driver
         pecl: false #optional, setup PECL
-        tools: composer:1.2.0
 
     - name: Check PHP Version
       run: php -v
 
-    - name: Composer install
-      run: composer install --prefer-dist
+    - name: Install dependencies
+      uses: php-actions/composer@v6
 
     - name: Install WP Tests
       run: bash bin/install-wp-tests.sh wordpress_test root root localhost latest
