--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
       run: composer install --optimize-autoloader --prefer-dist
 
     - name: Install WP Tests
-      run: bash bin/install-wp-tests.sh wordpress_test root root mysql latest
+      run: bash bin/install-wp-tests.sh wordpress_test root root mysql latest false
 
     - name: phpunit tests
       run: ./vendor/bin/phpunit
