--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,5 +53,5 @@ jobs:
     - name: Install WP Tests
       run: bash bin/install-wp-tests.sh wordpress_test root root mysql latest false
 
-    - name: phpunit tests
-      run: ./vendor/bin/phpunit
+    - name: PHPUnit tests
+      uses: php-actions/phpunit@v3
