--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,9 @@ jobs:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: wordpress_test
         ports:
-          - 33306:3306
+          - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
     - name: Checkout
@@ -50,8 +51,7 @@ jobs:
     - name: Install dependencies
       run: composer install --optimize-autoloader --prefer-dist
 
-    - name: Install WP Tests
-      run: bash bin/install-wp-tests.sh wordpress_test root root mysql latest false
-
-    - name: PHPUnit tests
-      uses: php-actions/phpunit@v3
+    - name: PHPUnit
+      run: |
+        bin/install-wp-tests.sh wordpress_test root root 127.0.0.1:${{ job.services.mysql.ports['3306'] }} latest true
+        vendor/bin/phpunit
