trying to fix CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       run: echo ${{ steps.setup-php.outputs.php-version }}
 
     - name: Install dependencies
-      run: composer install -o -–no-progress
+      run: composer install -o --no-progress
 
     - name: PHPUnit
       run: |
