--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "composer/installers": "v2.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6"
+    "phpunit/phpunit": "^6",
+    "yoast/phpunit-polyfills" : "1.0.3"
   },
   "autoload": {
     "psr-4": {
