--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,24 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php-versions }}
-        extension-csv: mbstring, intl #optional, setup extensions
-        ini-values-csv: post_max_size=256M, max_execution_time=270, short_open_tag=On #optional, setup php.ini configuration
+        extensions: mbstring, intl #optional, setup extensions
+        ini-values: post_max_size=256M, max_execution_time=270, short_open_tag=On #optional, setup php.ini configuration
         coverage: xdebug #optional, setup coverage driver
         tools: composer:2.1, phpunit:${{ matrix.phpunit-versions }}
 
     - name: Print PHP version
       run: echo ${{ steps.setup-php.outputs.php-version }}
+
+    - name: Get composer cache directory
+      id: composer-cache
+      run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: ${{ steps.composer-cache.outputs.dir }}
+        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+        restore-keys: ${{ runner.os }}-composer-
 
     - name: Install dependencies
       run: composer install -o --no-progress
