--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,16 @@
     "wordpress",
     "plugin"
   ],
-  "version": "1.9.8",
+  "version": "1.9.9",
   "homepage": "https://www.webkinder.ch/",
   "license": "GPL-3.0+",
-  "authors": [{
-    "name": "WEBKINDER",
-    "email": "support@webkinder.ch",
-    "homepage": "https://www.webkinder.ch/"
-  }],
+  "authors": [
+    {
+      "name": "WEBKINDER",
+      "email": "support@webkinder.ch",
+      "homepage": "https://www.webkinder.ch/"
+    }
+  ],
   "type": "wordpress-plugin",
   "require": {
     "php": ">=7.2",
@@ -20,7 +22,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^6",
-    "yoast/phpunit-polyfills" : "1.0.3"
+    "yoast/phpunit-polyfills": "1.0.3"
   },
   "autoload": {
     "psr-4": {
